# ACP-secret

./: CMakeCache.txt  CMakeLists.txt  Makefile  ProtocolParty.h  a.txt  callgrind.out.7606  callgrind.out.7610  callgrind.out.7611  callgrind.out.7612  callgrind.out.7613  callgrind.out.7614  callgrind.out.7615  cc_coin_toss.cpp  cc_coin_toss.h  cmake_install.cmake  coin_toss_test.cpp  coin_toss_test.h  coin_toss_tester.cpp  cointoss.cbp  parties.conf
